<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/maincolor">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize15"
            android:text="管理" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_jiankong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#9748F3"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shipinjiankong"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/tv_dingwei"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="#7596FF"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/renyuandignwei"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_shouyun"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#F3844C"
                    android:gravity="center"
                    android:text="@string/shouyunjiance"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_yuchuli"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="5dp"
                    android:background="#018DEF"
                    android:gravity="center"
                    android:text="@string/yuchuli"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_yanyang"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#5FCC55"
                    android:gravity="center"
                    android:text="@string/yanyang"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_tuoliu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="#F6BB3B"
                    android:gravity="center"
                    android:text="@string/tuoliu"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/tv_tuotan"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            android:background="#00BCFB"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuotan"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_qigui"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FF3C80"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/qigui"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_liuliang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:background="#5FCC55"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/liuliangjiance"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_youjifei"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#83A8C3"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/youjifei"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

            <TextView
                android:id="@+id/tv_entry"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/maincolor"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xinxiluru"
                android:layout_margin="5dp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>