<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <com.youth.banner.Banner
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backcolor">


        <LinearLayout
            android:id="@+id/ll_shipin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@mipmap/shipinjiankong" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipinjiankong"
                    android:textSize="@dimen/textsize15"
                    android:textColor="@color/textblack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chakanshipin"
                    android:textSize="@dimen/textsize13"
                    android:textColor="@color/textgray"
                    android:paddingTop="5dp"/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/backcolor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@mipmap/renyuandingwei" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/renyuandignwei"
                    android:textSize="@dimen/textsize15"
                    android:textColor="@color/textblack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/renyuanguiji"
                    android:textSize="@dimen/textsize13"
                    android:textColor="@color/textgray"
                    android:paddingTop="5dp"/>
            </LinearLayout>


        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_shouyun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/shouyun"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/shouyunjiance"/>

        <TextView
            android:id="@+id/tv_yuchuli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/yuchuli1"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/yuchuli"/>

        <TextView
            android:id="@+id/tv_yanyang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/yanyang"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/yanyang"/>

        <TextView
            android:id="@+id/tv_tuoliu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/tuoliu"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/tuoliu"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_liuliang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/liuliangjiance"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/liuliangjiance"/>

        <TextView
            android:id="@+id/tv_youjifei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/youjifei"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/youjifei"/>

        <TextView
            android:id="@+id/tv_tuotan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/tuotan"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/tuotan"/>

        <TextView
            android:id="@+id/tv_qigui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textgray"
            android:textSize="@dimen/textsize13"
            android:drawableTop="@mipmap/qigui"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/qigui"/>

    </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:background="@color/backcolor"/>

            <LinearLayout
                android:id="@+id/ll_baojing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@mipmap/baojing"/>

                <ViewFlipper
                    android:id="@+id/flipper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:autoStart="true"
                    android:flipInterval="3000"
                    android:inAnimation="@anim/push_up_in"
                    android:outAnimation="@anim/push_up_out">

                </ViewFlipper>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>